--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "devDependencies": {
     "eslint": "^8.18.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.1",
     "lint-staged": "^13.0.3"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
+    "express-validator": "^6.14.2",
     "joi": "^17.6.0",
     "nodemon": "^2.0.18",
     "winston": "^3.8.0",
