--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint-staged": "^13.0.3"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validation": "^4.1.0",
