[Refactor] 클라이언트 파일 삭제 및 구코드 예외처리 코드 추가

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "참여기업 labQ 과제",
   "main": "index.js",
   "scripts": {
-    "start": "node src/bin/www.js & node client.js",
+    "start": "node src/bin/www.js",
     "dev": "nodemon src/bin/www.js",
     "test": "jest",
     "prepare": "husky install"
